--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .heading1 {
+        @apply font-semibold text-gray-900 dark:text-zinc-300 font-black text-4xl md:text-5xl my-5
+    }
+
+    .heading2 {
+        @apply font-semibold text-gray-900 dark:text-zinc-300 font-black text-4xl md:text-5xl max-w-xl mb-10
+    }
+}
