--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap'); */
+@import "./custom.css";
 
 @tailwind base;
 @tailwind components;
@@ -6,7 +7,7 @@
 
 @layer components {
     .heading1 {
-        @apply font-semibold text-gray-900 dark:text-zinc-200 font-black text-4xl md:text-5xl my-5
+        @apply text-gray-900 dark:text-zinc-200 font-black text-4xl md:text-5xl my-5
     }
 
     .heading2 {
